--- a/portfolio.html
+++ b/portfolio.html
@@ -88,13 +88,23 @@
           <ul class="works-list list card-set">
             <li class="works-item card-set-item">
               <a href="" class="works-link link">
-                <img
-                  src="./images/Portfolio/img-1.jpg"
-                  alt="ноутбук с открытым сайтом"
-                  width="370"
-                  height="294"
-                  class="works-img"
-                />
+                <div class="overlay-wrapper">
+                  <img
+                    src="./images/Portfolio/img-1.jpg"
+                    alt="ноутбук с открытым сайтом"
+                    width="370"
+                    height="294"
+                    class="works-img"
+                  />
+                  <div class="works-overlay">
+                    <p class="works-overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="works-wrapper">
                   <h2 class="works-title">Технокряк</h2>
                   <p class="works-type">Веб-сайт</p>
@@ -103,13 +113,23 @@
             </li>
             <li class="works-item card-set-item">
               <a href="" class="works-link link">
-                <img
-                  src="./images/Portfolio/img-2.jpg"
-                  alt="постер с игрой в баскетбол"
-                  width="370"
-                  height="294"
-                  class="works-img"
-                />
+                <div class="overlay-wrapper">
+                  <img
+                    src="./images/Portfolio/img-2.jpg"
+                    alt="постер с игрой в баскетбол"
+                    width="370"
+                    height="294"
+                    class="works-img"
+                  />
+                  <div class="works-overlay">
+                    <p class="works-overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="works-wrapper">
                   <h2 class="works-title">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
@@ -120,13 +140,23 @@
             </li>
             <li class="works-item card-set-item">
               <a href="" class="works-link link">
-                <img
-                  src="./images/Portfolio/img-3.jpg"
-                  alt="постер ресторана морепродуктов"
-                  width="370"
-                  height="294"
-                  class="works-img"
-                />
+                <div class="overlay-wrapper">
+                  <img
+                    src="./images/Portfolio/img-3.jpg"
+                    alt="постер ресторана морепродуктов"
+                    width="370"
+                    height="294"
+                    class="works-img"
+                  />
+                  <div class="works-overlay">
+                    <p class="works-overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="works-wrapper">
                   <h2 class="works-title">
                     Ресторан <span lang="en">Seafood</span>
@@ -137,13 +167,23 @@
             </li>
             <li class="works-item card-set-item">
               <a href="" class="works-link link">
-                <img
-                  src="./images/Portfolio/img-4.jpg"
-                  alt="наушники"
-                  width="370"
-                  height="294"
-                  class="works-img"
-                />
+                <div class="overlay-wrapper">
+                  <img
+                    src="./images/Portfolio/img-4.jpg"
+                    alt="наушники"
+                    width="370"
+                    height="294"
+                    class="works-img"
+                  />
+                  <div class="works-overlay">
+                    <p class="works-overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="works-wrapper">
                   <h2 class="works-title">
                     Проект <span lang="en">Prime</span>
@@ -154,13 +194,23 @@
             </li>
             <li class="works-item card-set-item">
               <a href="" class="works-link link">
-                <img
-                  src="./images/Portfolio/img-5.jpg"
-                  alt="белая и коричневая коробки"
-                  width="370"
-                  height="294"
-                  class="works-img"
-                />
+                <div class="overlay-wrapper">
+                  <img
+                    src="./images/Portfolio/img-5.jpg"
+                    alt="белая и коричневая коробки"
+                    width="370"
+                    height="294"
+                    class="works-img"
+                  />
+                  <div class="works-overlay">
+                    <p class="works-overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="works-wrapper">
                   <h2 class="works-title">
                     Проект <span lang="en">Boxes</span>
@@ -171,13 +221,23 @@
             </li>
             <li class="works-item card-set-item">
               <a href="" class="works-link link">
-                <img
-                  src="./images/Portfolio/img-6.jpg"
-                  alt="экран компьютера с открытым сайтом"
-                  width="370"
-                  height="294"
-                  class="works-img"
-                />
+                <div class="overlay-wrapper">
+                  <img
+                    src="./images/Portfolio/img-6.jpg"
+                    alt="экран компьютера с открытым сайтом"
+                    width="370"
+                    height="294"
+                    class="works-img"
+                  />
+                  <div class="works-overlay">
+                    <p class="works-overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="works-wrapper">
                   <h2 class="works-title" lang="en">
                     Inspiration has no Borders
@@ -188,13 +248,23 @@
             </li>
             <li class="works-item card-set-item">
               <a href="" class="works-link link">
-                <img
-                  src="./images/Portfolio/img-7.jpg"
-                  alt="разворот журнала"
-                  width="370"
-                  height="294"
-                  class="works-img"
-                />
+                <div class="overlay-wrapper">
+                  <img
+                    src="./images/Portfolio/img-7.jpg"
+                    alt="разворот журнала"
+                    width="370"
+                    height="294"
+                    class="works-img"
+                  />
+                  <div class="works-overlay">
+                    <p class="works-overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="works-wrapper">
                   <h2 class="works-title">
                     Издание <span lang="en">Limited Edition</span>
@@ -205,13 +275,23 @@
             </li>
             <li class="works-item card-set-item">
               <a href="" class="works-link link">
-                <img
-                  src="./images/Portfolio/img-8.jpg"
-                  alt="белая бирка с надписью"
-                  width="370"
-                  height="294"
-                  class="works-img"
-                />
+                <div class="overlay-wrapper">
+                  <img
+                    src="./images/Portfolio/img-8.jpg"
+                    alt="белая бирка с надписью"
+                    width="370"
+                    height="294"
+                    class="works-img"
+                  />
+                  <div class="works-overlay">
+                    <p class="works-overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="works-wrapper">
                   <h2 class="works-title">Проект <span lang="en">LAB</span></h2>
                   <p class="works-type">Маркетинг</p>
@@ -220,13 +300,23 @@
             </li>
             <li class="works-item card-set-item">
               <a href="" class="works-link link">
-                <img
-                  src="./images/Portfolio/img-9.jpg"
-                  alt="работа за ноутбуком"
-                  width="370"
-                  height="294"
-                  class="works-img"
-                />
+                <div class="overlay-wrapper">
+                  <img
+                    src="./images/Portfolio/img-9.jpg"
+                    alt="работа за ноутбуком"
+                    width="370"
+                    height="294"
+                    class="works-img"
+                  />
+                  <div class="works-overlay">
+                    <p class="works-overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="works-wrapper">
                   <h2 class="works-title" lang="en">Growing Business</h2>
                   <p class="works-type">Приложение</p>
